--- a/idl/Makefile.in
+++ b/idl/Makefile.in
@@ -14,7 +14,7 @@
 #  License along with this library; if not, write to the Free Software
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
 #
-#  See http://www.salome-platform.org/
+# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
 #
 #
 # generate dependencies for idl file :
@@ -31,6 +31,7 @@ VPATH=.:${KERNEL_ROOT_DIR}/idl/salome:${GEOM_ROOT_DIR}/idl/salome :${SMESH_ROOT_
 
 IDL_FILES = GHS3DPlugin_Algorithm.idl
 
+LIB_LOCATION_SUFFIX=@LIB_LOCATION_SUFFIX@
 
 # copy all idl file in $(top_builddir)/idl
 inc: $(top_builddir)/idl/salome $(IDL_FILES:%=$(top_builddir)/idl/salome/%)
@@ -45,7 +46,7 @@ $(IDL_FILES:%=$(top_builddir)/idl/salome/%):$(IDL_FILES:%=$(top_srcdir)/idl/%)
 # python wrap
 lib: pyidl
 
-PYTHON_BUILD_SITE=$(top_builddir)/lib/python$(PYTHON_VERSION)/site-packages/@PACKAGE@
+PYTHON_BUILD_SITE=$(top_builddir)/lib$(LIB_LOCATION_SUFFIX)/python$(PYTHON_VERSION)/site-packages/@PACKAGE@
 
 pyidl: $(PYTHON_BUILD_SITE) $(IDL_FILES:%.idl=$(PYTHON_BUILD_SITE)/%_idl.py)
 
