Add missing CORBA stubs to the Makefile (not compiled at some platforms)

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -42,6 +42,11 @@ LIB_SRC = \
 
 LIB_SERVER_IDL = GHS3DPlugin_Algorithm.idl
 
+LIB_CLIENT_IDL = \
+	SALOME_Exception.idl \
+	SALOME_GenericObj.idl \
+	SMESH_Hypothesis.idl
+
 # Libraries targets
 LIB = libGHS3DEngine.la
 
