--- a/resources/Makefile.am
+++ b/resources/Makefile.am
@@ -27,7 +27,12 @@
 
 include $(top_srcdir)/adm_local/unix/make_common_starter.am
 
-dist_salomeres_DATA = \
-	GHS3DPlugin.xml \
-	mesh_hypo_ghs3d.png \
+dist_salomeres_DATA =		\
+	GHS3DPlugin.xml		\
+	SalomeApp.xml
+
+if GHS3DPLUGIN_ENABLE_GUI
+  dist_salomeres_DATA +=	\
+	mesh_hypo_ghs3d.png	\
 	mesh_tree_hypo_ghs3d.png
+endif
