--- a/Makefile.am
+++ b/Makefile.am
@@ -26,19 +26,32 @@
 
 include $(top_srcdir)/adm_local/unix/make_common_starter.am
 
+if GHS3DPLUGIN_ENABLE_GUI
+  ACLOCAL_AMFLAGS = -I adm_local/unix/config_files \
+                    -I ${KERNEL_ROOT_DIR}/salome_adm/unix/config_files \
+                    -I ${GUI_ROOT_DIR}/adm_local/unix/config_files \
+                    -I ${MED_ROOT_DIR}/adm_local/unix/config_files \
+                    -I ${GEOM_ROOT_DIR}/adm_local/unix/config_files \
+                    -I ${SMESH_ROOT_DIR}/adm_local/unix/config_files
+else !GHS3DPLUGIN_ENABLE_GUI
+  ACLOCAL_AMFLAGS = -I adm_local/unix/config_files \
+                    -I ${KERNEL_ROOT_DIR}/salome_adm/unix/config_files \
+                    -I ${MED_ROOT_DIR}/adm_local/unix/config_files \
+                    -I ${GEOM_ROOT_DIR}/adm_local/unix/config_files \
+                    -I ${SMESH_ROOT_DIR}/adm_local/unix/config_files
+endif
 
-SUBDIRS = idl adm_local resources src bin 
+SUBDIRS = idl adm_local resources src bin
 
 DIST_SUBDIRS = idl adm_local resources src bin 
 
 DISTCLEANFILES = a.out aclocal.m4 configure
 
-salomeinclude_DATA=GHS3DPLUGIN_version.h
+salomeinclude_DATA = GHS3DPLUGIN_version.h
 
-EXTRA_DIST+= \
+EXTRA_DIST += \
 	build_configure \
-	clean_configure \
-	LICENCE
+	clean_configure
 
 dist-hook:
 	rm -rf `find $(distdir) -name CVS`
