--- a/idl/Makefile.am
+++ b/idl/Makefile.am
@@ -26,13 +26,10 @@
 
 include $(top_srcdir)/adm_local/unix/make_common_starter.am
 
-BASEIDL_FILES = \
-	GHS3DPlugin_Algorithm.idl
-
-EXTRA_DIST+= $(BASEIDL_FILES)
+BASEIDL_FILES = GHS3DPlugin_Algorithm.idl
 
 # This variable defines the files to be installed
-salomeidl_DATA = $(BASEIDL_FILES)
+dist_salomeidl_DATA = $(BASEIDL_FILES)
 
 # GUI idl common library
 lib_LTLIBRARIES = libSalomeIDLGHS3DPLUGIN.la
@@ -44,23 +41,23 @@ nodist_libSalomeIDLGHS3DPLUGIN_la_SOURCES = \
 GHS3DPlugin_AlgorithmDynSK.cc: GHS3DPlugin_AlgorithmSK.cc
 
 # header files must be exported: other modules have to use this library
-nodist_salomeinclude_HEADERS= $(BASEIDL_FILES:%.idl=%.hh)
+nodist_salomeinclude_HEADERS = $(BASEIDL_FILES:%.idl=%.hh)
 
-libSalomeIDLGHS3DPLUGIN_la_CPPFLAGS =\
+libSalomeIDLGHS3DPLUGIN_la_CPPFLAGS = \
 	-I$(top_builddir)/salome_adm/unix \
 	-I$(top_builddir)/idl \
 	$(CORBA_CXXFLAGS) \
 	$(CORBA_INCLUDES) \
 	$(KERNEL_CXXFLAGS) \
-	$(SMESH_CXXFLAGS) \
-	$(GEOM_CXXFLAGS)
+	$(GEOM_CXXFLAGS) \
+	$(SMESH_CXXFLAGS)
 
 libSalomeIDLGHS3DPLUGIN_la_LDFLAGS = -no-undefined -version-info=0:0:0
 libSalomeIDLGHS3DPLUGIN_la_LIBADD  = \
-	@CORBA_LIBS@ \
 	$(KERNEL_LDFLAGS) -lSalomeIDLKernel \
+	$(GEOM_LDFLAGS) -lSalomeIDLGEOM \
 	$(SMESH_LDFLAGS) -lSalomeIDLSMESH \
-	$(GEOM_LDFLAGS) -lSalomeIDLGEOM
+	@CORBA_LIBS@
 
 # These variables defines the building process of CORBA files
 OMNIORB_IDL         = @OMNIORB_IDL@
@@ -69,23 +66,22 @@ OMNIORB_IDLPYFLAGS  = \
 	@OMNIORB_IDLPYFLAGS@ \
 	-I$(top_builddir)/idl/salome \
 	-I$(KERNEL_ROOT_DIR)/idl/salome \
-	-I$(SMESH_ROOT_DIR)/idl/salome \
-	-I$(GEOM_ROOT_DIR)/idl/salome
+	-I$(GEOM_ROOT_DIR)/idl/salome \
+	-I$(SMESH_ROOT_DIR)/idl/salome
 
 IDLCXXFLAGS = \
 	-bcxx \
 	@IDLCXXFLAGS@ \
 	-I$(top_builddir)/idl/salome \
 	-I$(KERNEL_ROOT_DIR)/idl/salome \
-	-I$(SMESH_ROOT_DIR)/idl/salome \
 	-I$(GEOM_ROOT_DIR)/idl/salome \
+	-I$(SMESH_ROOT_DIR)/idl/salome \
 	-I$(top_builddir)/salome_adm/unix
-
 IDLPYFLAGS  = \
 	@IDLPYFLAGS@ \
 	-I$(KERNEL_ROOT_DIR)/idl/salome \
-	-I$(SMESH_ROOT_DIR)/idl/salome \
-	-I$(GEOM_ROOT_DIR)/idl/salome
+	-I$(GEOM_ROOT_DIR)/idl/salome \
+	-I$(SMESH_ROOT_DIR)/idl/salome
 
 # potential problem on parallel make on the following - multiple outputs
 SUFFIXES = .idl .hh SK.cc
@@ -95,14 +91,14 @@ SUFFIXES = .idl .hh SK.cc
 	$(OMNIORB_IDL) $(IDLCXXFLAGS) $(OMNIORB_IDLCXXFLAGS) $<
 
 install-exec-local: $(BASEIDL_FILES:%=$(top_srcdir)/idl/%)
-	$(INSTALL) -d  $(pkgpythondir)
+	$(INSTALL) -d  $(DESTDIR)$(salomepythondir)
 	ls $^ | while read file; do \
-	  $(OMNIORB_IDL) $(IDLPYFLAGS) -C$(pkgpythondir) $$file ; \
+	  $(OMNIORB_IDL) $(IDLPYFLAGS) -C$(DESTDIR)$(salomepythondir) $$file ; \
 	done
 
 # uninstall-local removes too much, but it works in distcheck
 uninstall-local:
-	rm -rf $(pkgpythondir)/*
+	rm -rf $(DESTDIR)$(salomepythondir)/*
 
 mostlyclean-local:
 	-rm -f *.hh *.cc .depidl
@@ -116,7 +112,7 @@ mostlyclean-local:
 	@for dep in $^ dummy; do \
 	  if [ $$dep != "dummy" ]; then \
 	    echo Building dependencies for $$dep; \
-	    $(CPP) $(C_DEPEND_FLAG) -x c -I$(srcdir) -I$(KERNEL_ROOT_DIR)/idl/salome -I$(SMESH_ROOT_DIR)/idl/salome -I$(GEOM_ROOT_DIR)/idl/salome $$dep 2>/dev/null | \
+	    $(CPP) $(C_DEPEND_FLAG) -x c -I$(srcdir) -I$(KERNEL_ROOT_DIR)/idl/salome -I$(GEOM_ROOT_DIR)/idl/salome -I$(SMESH_ROOT_DIR)/idl/salome -I$(top_builddir)/salome_adm/unix $$dep 2>/dev/null | \
 	    sed 's/\.o/\SK.cc/' >>$@; \
 	  fi; \
 	done ;
