--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -57,8 +57,7 @@ libGHS3DEngine_la_CPPFLAGS =  \
 	$(BOOST_CPPFLAGS)     \
 	$(CORBA_CXXFLAGS)     \
 	$(CORBA_INCLUDES)     \
-	-I$(top_builddir)/idl \
-	-I$(top_builddir)/salome_adm/unix
+	-I$(top_builddir)/idl
 
 libGHS3DEngine_la_LDFLAGS  = \
 	../idl/libSalomeIDLGHS3DPLUGIN.la \
