--- a/src/GUI/Makefile.am
+++ b/src/GUI/Makefile.am
@@ -51,7 +51,9 @@ libGHS3DPluginGUI_la_CPPFLAGS =  \
 
 libGHS3DPluginGUI_la_LDFLAGS  = \
 	../../idl/libSalomeIDLGHS3DPLUGIN.la \
+	$(QT_LIBS) \
 	$(SMESH_LDFLAGS) -lSMESH \
+	$(GUI_LDFLAGS) -lsuit -lqtx -lSalomeApp \
 	$(CAS_KERNEL)
 
 # resources files
