--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -61,5 +61,6 @@ libGHS3DEngine_la_CPPFLAGS =  \
 
 libGHS3DEngine_la_LDFLAGS  = \
 	../idl/libSalomeIDLGHS3DPLUGIN.la \
-	$(SMESH_LDFLAGS) -lSMESHimpl -lSMESHEngine
-	$(KERNEL_LDFLAGS) -lSalomeGenericObj
+	$(CAS_KERNEL) -lTKBRep -lTKG2d -lTKG3d -lTKTopAlgo -lTKGeomBase -lTKGeomAlgo \
+	$(SMESH_LDFLAGS) -lSMESHimpl -lSMESHEngine -lSMESHDS -lSMDS \
+	$(KERNEL_LDFLAGS) -lSalomeGenericObj -lSALOMELocalTrace
