--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -63,4 +63,4 @@ libGHS3DEngine_la_LDFLAGS  = \
 	../idl/libSalomeIDLGHS3DPLUGIN.la \
 	$(CAS_KERNEL) -lTKBRep -lTKG2d -lTKG3d -lTKTopAlgo -lTKGeomBase -lTKGeomAlgo \
 	$(SMESH_LDFLAGS) -lSMESHimpl -lSMESHEngine -lSMESHDS -lSMDS \
-	$(KERNEL_LDFLAGS) -lSalomeGenericObj -lSALOMELocalTrace
+	$(KERNEL_LDFLAGS) -lSalomeGenericObj -lSALOMELocalTrace -lSALOMEBasics
