Fix make distcheck problem

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,7 +44,7 @@ SUBDIRS = idl adm_local resources src bin
 
 DIST_SUBDIRS = idl adm_local resources src bin 
 
-DISTCLEANFILES = a.out aclocal.m4 configure local-install.sh
+DISTCLEANFILES = a.out aclocal.m4 configure local-install.sh hack_libtool
 
 salomeinclude_DATA = GHS3DPLUGIN_version.h
 
