Prepare SALOME-6.4.0 for Win32 platform.

--- a/src/GUI/Makefile.am
+++ b/src/GUI/Makefile.am
@@ -62,7 +62,7 @@ libGHS3DPluginGUI_la_LDFLAGS  = \
 	$(QT_LIBS) \
 	$(KERNEL_LDFLAGS) -lSALOMELocalTrace \
 	$(MED_LDFLAGS) -lSalomeIDLMED \
-	$(SMESH_LDFLAGS) -lSMESH -lGeomSelectionTools  -lStdMeshersGUI\
+	$(SMESH_LDFLAGS) -lGEOM -lSMESH -lGeomSelectionTools  -lStdMeshersGUI -lSMESHFiltersSelection \
 	$(GUI_LDFLAGS) -lsuit -lqtx -lSalomeApp \
 	$(CAS_KERNEL)
 
