0021308: Remove hard-coded dependency of the external mesh plugins from the SMESH module
+# Scripts to be installed.
+dist_salomescript_DATA= GHS3DPluginDC.py

--- a/src/GHS3DPlugin/Makefile.am
+++ b/src/GHS3DPlugin/Makefile.am
@@ -63,3 +63,6 @@ libGHS3DEngine_la_LDFLAGS  = \
   $(MED_LDFLAGS) -lSalomeIDLMED \
   $(SMESH_LDFLAGS) -lSMESHimpl -lSMESHEngine -lSMESHDS -lSMDS -lStdMeshers \
   $(KERNEL_LDFLAGS) -lSalomeGenericObj -lSALOMELocalTrace -lSALOMEBasics -lSalomeNS -lOpUtil
+
+# Scripts to be installed.
+dist_salomescript_DATA= GHS3DPluginDC.py
