--- a/GHS3DPLUGIN_version.h.in
+++ b/GHS3DPLUGIN_version.h.in
@@ -30,5 +30,6 @@
 
 #define GHS3DPLUGIN_VERSION_STR "@VERSION@"
 #define GHS3DPLUGIN_VERSION     @XVERSION@
+#define GHS3DPLUGIN_DEVELOPMENT @VERSION_DEV@
 
 #endif // __GHS3DPLUGIN_VERSION_H__
