--- a/bin/VERSION.in
+++ b/bin/VERSION.in
@@ -1,1 +1,3 @@
-THIS IS SALOME - GHS3DPLUGIN VERSION: @VERSION@
+[SALOME GHS3DPLUGIN] : @VERSION@
+[DEVELOPMENT]        : @VERSION_DEV@
+[DESCRIPTION]        : DISTENE TetGen-GHS3d meshing plug-in for SALOME Mesh module
