0021308: EDF 1923 SMESH: Remove hard-coded dependency of the external mesh plugins from the SMESH module * Improve documentation for meshing plug-ins (in particular, dynamically added methods)

--- a/doc/salome/gui/GHS3DPLUGIN/doxyfile_py.in
+++ b/doc/salome/gui/GHS3DPLUGIN/doxyfile_py.in
@@ -96,7 +96,7 @@ EXAMPLE_RECURSIVE      = NO
 #---------------------------------------------------------------------------
 #Input related options
 #---------------------------------------------------------------------------
-INPUT             = @top_srcdir@/src/GHS3DPlugin/GHS3DPluginDC.py
+INPUT             = @top_srcdir@/src/GHS3DPlugin/GHS3DPluginDC.py smesh.py
 FILE_PATTERNS     = 
 IMAGE_PATH        = @srcdir@/images
 RECURSIVE         = NO
