--- a/doc/salome/gui/GHS3DPLUGIN/doxyfile_py.in
+++ b/doc/salome/gui/GHS3DPLUGIN/doxyfile_py.in
@@ -97,7 +97,7 @@ EXAMPLE_RECURSIVE      = NO
 #Input related options
 #---------------------------------------------------------------------------
 INPUT             = @top_srcdir@/src/GHS3DPlugin/GHS3DPluginBuilder.py \
-                    @SMESH_ROOT_DIR@/lib/python@PYTHON_VERSION@/site-packages/salome/salome/smesh/smeshBuilder.py \
+                    smeshBuilder.py \
                     @SMESH_ROOT_DIR@/lib/python@PYTHON_VERSION@/site-packages/salome/salome/smesh/smesh_algorithm.py
 FILE_PATTERNS     = 
 IMAGE_PATH        = @srcdir@/images
