--- a/doc/salome/gui/GHS3DPLUGIN/Makefile.am
+++ b/doc/salome/gui/GHS3DPLUGIN/Makefile.am
@@ -18,7 +18,7 @@
 #
 include $(top_srcdir)/adm_local/unix/make_common_starter.am
 
-EXTRA_DIST += images input static/footer.html static/doxygen.css
+EXTRA_DIST += images input static/footer.html static/salome_extra.css
 
 guidocdir = $(docdir)/gui/GHS3DPLUGIN
 guidoc_DATA = images/head.png
