--- a/adm_local/cmake_files/CMakeLists.txt
+++ b/adm_local/cmake_files/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (C) 2007-2013  CEA/DEN, EDF R&D, OPEN CASCADE
+# Copyright (C) 2012-2013  CEA/DEN, EDF R&D, OPEN CASCADE
 #
 # This library is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Lesser General Public
@@ -17,12 +17,12 @@
 # See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
 #
 
-SUBDIRS = examples gui
-SUBDIRSGUI = gui
+# ===============================================================
+# Files to be installed
+# ===============================================================
 
-usr_docs:
-	@@SETX@; for d in $(SUBDIRSGUI); do 	\
-	   (cd $$d && $(MAKE) $@) || exit 1; 	\
-	done;
-
-docs: usr_docs
+# These files are data, module or lib files
+SET(_adm_data
+  FindSalomeGHS3DPLUGIN.cmake
+)
+INSTALL(FILES ${_adm_data} DESTINATION ${SALOME_INSTALL_CMAKE_LOCAL})
