--- a/bin/VERSION.in
+++ b/bin/VERSION.in
@@ -1,3 +1,3 @@
-[SALOME GHS3DPLUGIN] : @VERSION@
-[DEVELOPMENT]        : @VERSION_DEV@
+[SALOME GHS3DPLUGIN] : @SALOMEGHS3DPLUGIN_VERSION@
+[DEVELOPMENT]        : @SALOMEGHS3DPLUGIN_VERSION_DEV@
 [DESCRIPTION]        : DISTENE TetGen-GHS3d meshing plug-in for SALOME Mesh module
