--- a/adm_local/unix/CMakeLists.txt
+++ b/adm_local/unix/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (C) 2004-2013  CEA/DEN, EDF R&D
+# Copyright (C) 2012-2013  CEA/DEN, EDF R&D, OPEN CASCADE
 #
 # This library is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Lesser General Public
@@ -17,6 +17,4 @@
 # See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
 #
 
-include $(top_srcdir)/adm_local/unix/make_common_starter.am
-
-SUBDIRS = config_files
+ADD_SUBDIRECTORY(config_files)
