--- a/adm_local/unix/config_files/CMakeLists.txt
+++ b/adm_local/unix/config_files/CMakeLists.txt
@@ -1,4 +1,7 @@
-# Copyright (C) 2004-2013  CEA/DEN, EDF R&D
+# Copyright (C) 2007-2013  CEA/DEN, EDF R&D, OPEN CASCADE
+#
+# Copyright (C) 2003-2007  OPEN CASCADE, EADS/CCR, LIP6, CEA/DEN,
+# CEDRAT, EDF R&D, LEG, PRINCIPIA R&D, BUREAU VERITAS
 #
 # This library is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Lesser General Public
@@ -17,14 +20,9 @@
 # See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
 #
 
-# -* Makefile *- 
-# Author : Guillaume Boulant (CSSI)
-# Module : GHS3DPLUGIN
-#
-include $(top_srcdir)/adm_local/unix/make_common_starter.am
-
-# non-distributed files 
-nodist_salomescript_DATA = VERSION
-
-# distributed files
-dist_salomescript_SCRIPTS =
+SET(_m4_data
+  check_GHS3D.m4
+  check_GHS3DPLUGIN.m4
+)
+            
+INSTALL(FILES ${_m4_data} DESTINATION ${SALOME_INSTALL_AMCONFIG_LOCAL}/config_files)
