--- a/doc/salome/gui/CMakeLists.txt
+++ b/doc/salome/gui/CMakeLists.txt
@@ -1,5 +1,7 @@
-#!/bin/sh
-# Copyright (C) 2004-2013  CEA/DEN, EDF R&D
+# Copyright (C) 2007-2013  CEA/DEN, EDF R&D, OPEN CASCADE
+#
+# Copyright (C) 2003-2007  OPEN CASCADE, EADS/CCR, LIP6, CEA/DEN,
+# CEDRAT, EDF R&D, LEG, PRINCIPIA R&D, BUREAU VERITAS
 #
 # This library is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Lesser General Public
@@ -18,11 +20,4 @@
 # See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
 #
 
-CURRENT_DIR=`pwd`
-CONF_DIR=`echo $0 | sed -e "s,[^/]*$,,;s,/$,,;s,^$,.,"`
-cd ${CONF_DIR}
-python $KERNEL_ROOT_DIR/salome_adm/cmake_files/deprecated/am2cmake.py --ghs3dplugin
-status=$?
-cd ${CURRENT_DIR}
-exit $status
-
+ADD_SUBDIRECTORY(GHS3DPLUGIN)
