--- a/doc/salome/gui/GHS3DPLUGIN/doxyfile_py.in
+++ b/doc/salome/gui/GHS3DPLUGIN/doxyfile_py.in
@@ -21,7 +21,7 @@
 # Project related configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = "SALOME GHS3DPLUGIN User's Guide"
-OUTPUT_DIRECTORY       = .
+OUTPUT_DIRECTORY       = GHS3DPLUGIN
 CREATE_SUBDIRS	       = NO
 OUTPUT_LANGUAGE        = English
 USE_WINDOWS_ENCODING   = NO
@@ -100,7 +100,7 @@ INPUT             = tmp/GHS3DPluginBuilder.py \
                     tmp/smeshBuilder.py \
                     tmp/smesh_algorithm.py
 FILE_PATTERNS     = 
-IMAGE_PATH        = @srcdir@/images
+IMAGE_PATH        = @CMAKE_CURRENT_SOURCE_DIR@/images
 RECURSIVE         = NO
 EXAMPLE_PATH      =
 
@@ -109,9 +109,9 @@ EXAMPLE_PATH      =
 #---------------------------------------------------------------------------
 GENERATE_HTML     = YES
 HTML_OUTPUT       = ghs3dpluginpy_doc
-HTML_HEADER       = @builddir@/static/header_py.html
-HTML_FOOTER       = @srcdir@/static/footer.html
-HTML_EXTRA_STYLESHEET   = @srcdir@/static/salome_extra.css
+HTML_HEADER       = @CMAKE_CURRENT_BINARY_DIR@/static/header_py.html
+HTML_FOOTER       = @CMAKE_CURRENT_SOURCE_DIR@/static/footer.html
+HTML_EXTRA_STYLESHEET   = @CMAKE_CURRENT_SOURCE_DIR@/static/salome_extra.css
 TOC_EXPAND        = YES
 DISABLE_INDEX     = NO
 GENERATE_TREEVIEW = YES
