--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -1,4 +1,7 @@
-# Copyright (C) 2004-2013  CEA/DEN, EDF R&D
+# Copyright (C) 2007-2013  CEA/DEN, EDF R&D, OPEN CASCADE
+#
+# Copyright (C) 2003-2007  OPEN CASCADE, EADS/CCR, LIP6, CEA/DEN,
+# CEDRAT, EDF R&D, LEG, PRINCIPIA R&D, BUREAU VERITAS
 #
 # This library is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Lesser General Public
@@ -17,8 +20,18 @@
 # See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
 #
 
-include $(top_srcdir)/adm_local/unix/make_common_starter.am
+IF(SALOME_BUILD_GUI)
+  SET(GHS3DPLUGIN_RESOURCES_FILES_WITH_GUI
+	mesh_hypo_ghs3d.png
+	mesh_tree_hypo_ghs3d.png
+  )
+ENDIF(SALOME_BUILD_GUI)
 
-dist_admlocalm4_DATA =		\
-    check_GHS3D.m4		\
-    check_GHS3DPLUGIN.m4
+SET(GHS3DPLUGIN_RESOURCES_FILES
+  GHS3DPlugin.xml
+  SalomeApp.xml
+  ${GHS3DPLUGIN_RESOURCES_FILES_WITH_GUI}
+)
+
+
+INSTALL(FILES ${GHS3DPLUGIN_RESOURCES_FILES} DESTINATION ${SALOME_GHS3DPLUGIN_INSTALL_RES_DATA})
